tdf#100864 Assign a tooltip to the button to close pane

which appears at the top-right corner of both Impress's
Slide Pane and Draw's Page Pane.

Change-Id: Ida52ccc35e42546cd6260001e22335b04608034d