sfx2/source/dialog/titledockwin.cxx
@@ -217,6 +217,7 @@ namespace sfx2
         // Get the closer bitmap and set it as right most button.
         BitmapEx aBitmapEx(SFX_BMP_CLOSE_DOC);
         m_aToolbox->InsertItem(1, Image(aBitmapEx));
+        m_aToolbox->SetQuickHelpText(1, SfxResId(STR_CLOSE_PANE));
         m_aToolbox->ShowItem( 1 );
     }
 
